--- a/extra/index.html
+++ b/extra/index.html
@@ -1,29 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ElderCareWatch Wifi 設定</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      html {
+        font-family: Arial, sans-serif;
+      }
+
+      h1 {
+        text-align: center;
+        background-color: #0a1128;
+        font-size: 1.8rem;
+        color: white;
+        padding: 20px;
+        margin: 0;
+      }
+
+      body {
+        margin: 0;
+      }
+
+      .card {
+        background-color: white;
+        box-shadow: 2px 2px 12px 1px rgba(140, 140, 140, 0.5);
+      }
+
+      form {
+        padding: 10px;
+      }
+
+      input[type='submit'] {
+        border: none;
+        color: #fefcfb;
+        background-color: #034078;
+        padding: 8px;
+        margin-bottom: 10px;
+        font-size: 16px;
+        width: 100px;
+        border-radius: 4px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+      }
+      input[type='submit']:hover {
+        background-color: #0f5697;
+      }
+      input[type='text'],
+      input[type='number'] {
+        width: 50%;
+        min-width: none;
+        padding: 5px;
+        margin: 5px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+
+      label {
+        font-size: 1.2rem;
+      }
+    </style>
   </head>
   <body>
-    <form action="/wifi_save">
-      <input list="ssid" length="32" placeholder="SSID" />
-      <input type="password" length="64" placeholder="password" />
+    <h1>ElderCareWatch Wifi 設定</h1>
+    <div style="padding: 5%">
+      <div class="card">
+        <form action="/" method="POST">
+          <label for="ssid">SSID</label>
+          <input type="text" list="sl" id="ssid" name="ssid" />
+          <br />
+          <label for="pass">Password</label>
+          <input type="text" id="pass" name="pass" />
+          <br />
+          <label for="ip">IP</label>
+          <input type="text" id="ip" name="ip" value="" />
+          <br />
+          <label for="gateway">Gateway</label>
+          <input type="text" id="gateway" name="gateway" value="" />
+          <br />
+          <input type="submit" value="Submit" />
+        </form>
 
-      <datalist id="ssid"> </datalist>
-    </form>
-  </body>
-  <script>
-    const ssidEl = document.getElementById('ssid');
-    const event = new EventSource('/events');
-    event.addEventListener('wifi_info', ({ data }) => {
-      ssidEl.innerHTML = '';
-      data = JSON.parse(data);
-      data.forEach(({ ssid }) => {
-        var option = document.createElement('option');
-        option.value = ssid;
-        ssidEl.appendChild(option);
+        <datalist id="sl">
+          <option value="awa"></option>
+        </datalist>
+      </div>
+    </div>
+    <script>
+      const ssidEl = document.getElementById('sl');
+      const event = new EventSource('/events');
+      event.addEventListener('wifi_info', ({ data }) => {
+        ssidEl.innerHTML = '';
+        data = JSON.parse(data);
+        data.forEach(({ ssid }) => {
+          var option = document.createElement('option');
+          option.value = ssid;
+          ssidEl.appendChild(option);
+        });
       });
-    });
-  </script>
+    </script>
+  </body>
 </html>
