--- a/watch/extra/index.html
+++ b/watch/extra/index.html
@@ -71,6 +71,9 @@
             <label for="password">Password</label>
             <br />
             <input type="text" id="password" name="password" />
+            <label for="id">ID</label>
+            <br />
+            <input type="text" id="id" name="id" />
             <input type="submit" value="Submit" />
           </form>
 
